# ai-powered-mentalhealth-asssitant-capstone

./: README.md
backend/: .env.example  Dockerfile  auth.py  crisis.py  cron.py  db.py  docker-compose.yml  email_service.py  email_templates.py  emotion_log.csv  exercises.py  face_detection.py  face_recognizer.py  main.py  mental_health_evaluation.py  models.py  pyproject.toml  requirements.txt  schemas.py  summary.py  system_prompt.py  therapist.py  transcriber.py  voice_recognizer.py
backend/audio_files/: recording.webm
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/components/: AuthPage.tsx  CameraFeed.tsx  CopingPlan.tsx  CopyingPlan.tsx  CrisisAlert.tsx  HomePage.tsx  LangSelect.tsx  Layout.tsx  MoodTimeline.tsx  ProtectedRoute.tsx  ResponseCard.tsx  SessionSummaryPage.tsx  Therapist.tsx  TherapistResponse.tsx  Therapy.tsx  VoiceRecorder.tsx
frontend/src/components/attended-sessions/: AttendedSessions.tsx  SessionPage.tsx  SessionSummaryPage.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatSection.tsx
frontend/src/components/context/: LanguageProvider.tsx  UserProvider.tsx  langContext.ts  userContext.ts
frontend/src/components/exercises/: AffirmationExercise.tsx  AnxietyReleaseExercise.tsx  BreathingExercise.tsx  ExerciseCard.tsx  Exercises.tsx  ExercisesSection.tsx  GroundingExercise.tsx  GuidedExercise.tsx
frontend/src/components/history/: AnalyticsDashboard.tsx  ChatHistory.tsx  HistorySection.tsx
frontend/src/components/settings/: ProfileSection.tsx  (+2 more)
(+5 files in other folders)
